# telnetio

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: main.yml
examples/: anyio_echo_server.py
src/telnetio/: __init__.py  _anyio.py  _machine.py  _opt.py  opt.py  telnetlib.py
tests/: test_machine.py  test_telnetlib.py
