[tool.poetry]
name = "telnetio"
version = "0.3.0"
description = "Sans-IO telnet parser"
authors = ["Jordan Speicher <jordan@jspeicher.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/uSpike/telnetio"
classifiers = [
    "Framework :: AnyIO"
]
packages = [
    { include = "telnetio", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.7"
anyio = {version = "^3", optional = true}

[tool.poetry.dev-dependencies]
anyio = "^3.6"
pytest = "^7.2"
mypy = "^1.0"
pytest-cov = "^4.0"

[tool.poetry.extras]
anyio = ["anyio"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.9"
strict = true
show_column_numbers = true
show_error_codes = true

[tool.black]
line-length = 120
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 120

[tool.flakeheaven]
format = "colored"
show_source = true
max_line_length = 120

[tool.flakeheaven.plugins]
# Ignore redefinition of variable name in new scope
pyflakes = ["+*", "-F823"]
flake8-bandit = ["+*"]
flake8-bugbear = ["+*"]
flake8-builtins = ["+*"]
flake8-comprehensions = ["+*"]
flake8-darglint = ["+*"]
flake8-docstrings = ["+*"]
flake8-eradicate = ["+*"]
flake8-mutable = ["+*"]
flake8-pytest-style = ["+*"]
flake8-spellcheck = ["+*"]

[tool.flakeheaven.exceptions."**/__init__.py"]
# Ignore unused imports in __init__.py files
pyflakes = ["-F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing --no-cov-on-fail"
